Limpieza de cache de tareas al cambiar de catástrofe y mostrar tareas según la catástrofe seleccionada